# IDReg

./: settings.gradle
IDRecong/: build.gradle
IDRecong/src/androidTest/java/com/cam/idrecong/: ExampleInstrumentedTest.kt
IDRecong/src/main/: AndroidManifest.xml
IDRecong/src/main/cpp/: CMakeLists.txt  OpenCVHelper.cpp
IDRecong/src/main/java/com/cam/idrecong/: IDRecong.kt
IDRecong/src/test/java/com/cam/idrecong/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/cam/idreg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cam/idreg/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cam/idreg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
